<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Здесь могла быть ваша реклама"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/EnterPassword"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="30dp">

                    <ImageView
                        android:id="@+id/imageView_setOne"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        app:srcCompat="@drawable/indicator" />

                    <ImageView
                        android:id="@+id/imageView_setTwo"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        app:srcCompat="@drawable/indicator" />

                    <ImageView
                        android:id="@+id/imageView_setThree"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        app:srcCompat="@drawable/indicator" />

                    <ImageView
                        android:id="@+id/imageView_setFour"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        app:srcCompat="@drawable/indicator" />

                    <ImageView
                        android:id="@+id/imageView_setFive"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        app:srcCompat="@drawable/indicator" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <ImageButton
                    android:id="@+id/image_Button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_1"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_1" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <ImageButton
                    android:id="@+id/image_Button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_2"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_2" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <ImageButton
                    android:id="@+id/image_Button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_3"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_3" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <ImageButton
                    android:id="@+id/image_Button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_4"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_4" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <ImageButton
                    android:id="@+id/image_Button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_5"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_5" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <ImageButton
                    android:id="@+id/image_Button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_6"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_6" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <ImageButton
                    android:id="@+id/image_Button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_7"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_7" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <ImageButton
                    android:id="@+id/image_Button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_8"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_8" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <ImageButton
                    android:id="@+id/image_Button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_9"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_9" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/image_Button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Digit_0"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    app:srcCompat="@drawable/digit_0" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <ImageButton
                    android:id="@+id/image_ButtonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@color/white"
                    android:contentDescription="@string/ButtonDelete"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:tint="@color/black"
                    app:srcCompat="@android:drawable/ic_input_delete" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>